# django-admin-inline-paginator

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  profile-bandit.yml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: code-quality.yml  on-push.yml  on-tag.yml  pypi.yml  sonar.yml  tests.yml
django_admin_inline_paginator/: __init__.py  admin.py  apps.py  meta.py
django_admin_inline_paginator/static/django_admin_inline_paginator/: FormAction.js  paginator.css
django_admin_inline_paginator/templates/admin/: tabular_paginated.html  tabular_paginator.html
django_admin_inline_paginator/templates/admin_inline/: tabular_paginator.html
django_admin_inline_paginator/templates/admin_inline/graphelli/: tabular_inline.html  tabular_paginator.html
django_admin_inline_paginator/templatetags/: paginated_inline.py
django_admin_inline_paginator/tests/: __init__.py  admin_unit_test.py  apps_test.py  meta_test.py
example/: makefile  requirements.txt
example/app/example/: admin.py  models.py
example/app/example/migrations/: 0001_initial.py
example/conf/: settings.py  wsgi.py
example/fixtures/: bkp.json
tests/: __init__.py  admin_unit_test.py  apps_test.py
