[metadata]
description-file = README.md

[pycodestyle]
max-line-length = 120
exclude = */.git/*,*/venv/*,*/migrations/*,.env

[isort]
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_django = django
skip = venv,env,node_modules,migrations,.env,.venv
skip_glob = */.git/*,*/venv/*,*/migrations/*
line_length = 120

[coverage:run]
omit =
    */venv/*
    */env/*
    */.venv/*
    */.env/*
    **/__pycache__/**
    **/tests/**
    **/migrations/**
    config/**
    .vscode/**
    */.local/*
    */usr/lib/*